# cap-store-appv2

apps/desktop/: .gitignore  AGENTS.md  INSTALL-IOS.md  README.md  code.applescript  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: replace-proj.mjs  set-version.mjs
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.dev.json  tauri.conf.dev.windows.json  tauri.conf.json  tauri.conf.prod.json  tauri.conf.prod.windows.json  tauri.conf.stg-debug.json  tauri.conf.stg.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/api/: useApiClient.ts  useDefaultStorage.test.ts  useDefaultStorage.ts
apps/desktop/src/components/: AuthFooter.css  AuthFooter.tsx  InvoiceItem.tsx  SecureRoute.tsx
apps/desktop/src/config/: env.ts
apps/desktop/src/hooks/: useAuthState.tsx  useComponentRegistryModal.tsx  useInvoice.tsx  useTauriDragDrop.tsx
apps/desktop/src/mocks/: handlers.ts
apps/desktop/src/mocks/handlers/: akizukiHandlers.ts  categoryHandlers.ts  componentHandlers.ts  inventoryHandlers.ts  locationHandlers.ts  makerHandlers.ts  projectHandlers.ts  projectHistoryHandler.ts  storageHandlers.ts
apps/desktop/src/modals/: AkizukiInvoiceModal.css  AkizukiInvoiceModal.tsx
apps/desktop/src/pages/: Home.tsx  PartDetailPage.tsx  ProjectMainPage.css  ProjectMainPage.tsx  ProjectPage.tsx  useProjectMainPageUtils.tsx
apps/desktop/src/pages/locations/: NorthRoomModal.css  NorthRoomModal.tsx  NorthRoomPage.tsx
apps/desktop/src/pages/locations/utils/: positionIndexBitMask.test.ts  positionIndexBitMask.ts
apps/desktop/src/pages/projects/: CreateProjectProvider.test.ts  CreateProjectProvider.tsx  NewProjectPage.tsx  ProjectBomList.tsx  ProjectMetaDataPanel.tsx
apps/desktop/src/test/: mswServer.ts  setupTests.ts
apps/desktop/src/types/invoices/: invoice.ts  item.ts
apps/desktop/src/utils/: parseApiError.ts
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/api/: useApiClient.ts
apps/web/src/config/: OktaConfig.ts
apps/web/src/mocks/: handlers.ts  index.ts
apps/web/src/utils/: downloadBlob.ts
