[package]
name = "cap-store-app"
version = "0.4.1"
description = "電子部品・プロジェクト管理アプリ"
authors = ["george"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cap_store_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cap-locator-cli = { git = "https://github.com/GTech9971/cap-locator-cli.git", tag = "release.0.0.2", optional = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
akizuki_invoice_parser = { git = "https://github.com/GTech9971/akizuki-invoice-parser.git", tag = "0.0.4" }
hidapi = { version = "2.6", optional = true }
dotenvy = "0.15"
anyhow = "1.0"

tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2.0.0"

[features]
default = []
desktop = ["hidapi", "cap-locator-cli"]
mobile = []
